# Billing-Bot

./: .gitignore  README.md  pyproject.toml
billing-bot/: .env  .env.dev  .env.example  docker-compose.yml  main.py  makefile
billing-bot/app/api/: router.py
billing-bot/app/api/middlewares/: not_found_middleware.py
billing-bot/app/api/schemas/: bill.py
billing-bot/app/api/v1/: router.py
billing-bot/app/api/v1/endpoints/: bill.py
billing-bot/app/core/: config.py
billing-bot/app/db/: session.py
billing-bot/app/db/repository/: BillRepository.py  ContactRepository.py  bill_repository.py
billing-bot/app/domain/models/: bill.py  bill_installment.py  bill_payment_schedule.py  contacts.py  costumer.py  costumer_bill.py  customer.py  customer_bill.py
billing-bot/app/domain/repositories/: base_repository.py  bill_repository.py  bill_repository_interface.py
billing-bot/app/domain/services/: bill_service.py
billing-bot/app/infraestructure/database/: session.py
billing-bot/app/infraestructure/repositories/: bill_repository.py  contact_repository.py  customer_repository.py
billing-bot/app/models/: bill.py  contacts.py
billing-bot/app/tests/unit/: bill_tests.py
frontend/ui/: ui.py
