[tool.poetry]
name = "billing-bot"
version = "0.1.0"
description = ""
authors = ["Cadorin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
reflex = "^0.7.2"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
